--- a/index.html
+++ b/index.html
@@ -1,87 +1,58 @@
-<?php
-
-require __DIR__ . '/src/bootstrap.php';
-require __DIR__ . '/src/login.php';
-?>
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Purple Admin</title>
-    <!-- plugins:css -->
-    <link rel="stylesheet" href="src/assets/vendors/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="src/assets/vendors/ti-icons/css/themify-icons.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page</title>
     <link rel="stylesheet" href="src/assets/vendors/css/vendor.bundle.base.css">
-    <link rel="stylesheet" href="src/assets/vendors/font-awesome/css/font-awesome.min.css">
-    <!-- endinject -->
-    <!-- Plugin css for this page -->
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <!-- endinject -->
-    <!-- Layout styles -->
     <link rel="stylesheet" href="src/assets/css/style.css">
-    <!-- End layout styles -->
     <link rel="shortcut icon" href="src/assets/images/favicon.png" />
-  </head>
-  <body>
-<?php flash() ?>
-
-<!--New Code-->
-<div class="container-scroller">
-    <div class="container-fluid page-body-wrapper full-page-wrapper">
-        <div class="content-wrapper d-flex align-items-center auth">
-            <div class="row flex-grow">
-                <div class="col-lg-4 mx-auto">
-                    <div class="auth-form-light text-left p-5">
-                        <div class="brand-logo">
-                            <img src="src/assets/images/logo.svg">
-                        </div>
-                        <h4>Hello! let's get started</h4>
-                        <h6 class="font-weight-light">Sign in to continue.</h6>
-                        <form class="pt-3" action="#" method="post">
-                            <div class="form-group">
-                                <input type="text" class="form-control form-control-lg" name="username" id="username"
-                                    placeholder="Username" value="<?= $inputs['username'] ?? '' ?>">
-                                <small><?= $errors['username'] ?? '' ?></small>
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control form-control-lg" name="password"
-                                    id="password" placeholder="Password">
-                                <small><?= $errors['password'] ?? '' ?></small>
-                            </div>
-                            <div class="mt-3 d-grid gap-2">
-                                <button
-                                    class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn"
-                                    type="submit">Login</button>
-                            </div>
-                            <div class="text-center mt-4 font-weight-light"> Don't have an account? <a
-                                    href="public/register.php" class="text-primary">Create</a>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- content-wrapper ends -->
+    <style>
+        .landing-page {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+        .landing-content {
+            text-align: center;
+        }
+        .landing-content h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+        }
+        .landing-content a {
+            display: inline-block;
+            margin: 10px;
+            padding: 15px 25px;
+            font-size: 1.2em;
+            color: #fff;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            transition: background-color 0.3s;
+        }
+        .landing-content a:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+<div class="landing-page">
+    <div class="landing-content">
+        <h1>Welcome to Our Site</h1>
+        <a href="public/login.php">Login</a>
+        <a href="public/register.php">Register</a>
+        <!-- Add more links as needed -->
     </div>
-    <!-- page-body-wrapper ends -->
 </div>
-
-<!-- container-scroller -->
-    <!-- plugins:js -->
-    <script src="src/assets/vendors/js/vendor.bundle.base.js"></script>
-    <!-- endinject -->
-    <!-- Plugin js for this page -->
-    <!-- End plugin js for this page -->
-    <!-- inject:js -->
-    <script src="src/assets/js/off-canvas.js"></script>
-    <script src="src/assets/js/misc.js"></script>
-    <script src="src/assets/js/settings.js"></script>
-    <script src="src/assets/js/todolist.js"></script>
-    <script src="src/assets/js/jquery.cookie.js"></script>
-    <!-- endinject -->
-  </body>
+<script src="src/assets/vendors/js/vendor.bundle.base.js"></script>
+<script src="src/assets/js/off-canvas.js"></script>
+<script src="src/assets/js/misc.js"></script>
+<script src="src/assets/js/settings.js"></script>
+<script src="src/assets/js/todolist.js"></script>
+<script src="src/assets/js/jquery.cookie.js"></script>
+</body>
 </html>
